--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -16,6 +16,6 @@ jobs:
           node-version: 12.x
       # ISO Langusge Codes: https://cloud.google.com/translate/docs/languages  
       - name: Adding README - English
-        uses: samadpls/translate-readme@main
+        uses: samadpls/translate-readme@master
         with:
           LANG: en
